# EventHands

./: EVAL_REAL.md  EVAL_SYNTH.md  LIVE_DEMO.md  README.md  TRAIN.md  environment.yml
evcreader/: README.md  countevents.c  evcreader.c  setup.py
evsim_joints/: CMakeLists.txt  aux.frag  aux.vert  config.cpp  default.vert  evc.cu  evc.h  framebuffer.h  log.h  main.cpp  mano.cpp  mano.h  manoanimator.cpp  manoanimator.h  manogpu.cu  manogpu.h  manoloader.cpp  manoloader.h  manomodel.cpp  manomodel.h  manotypes.cpp  manotypes.h  shader.h  texture.cpp
evsim_joints/cmake/xtensor-blas/: xtensor-blasConfigVersion.cmake  xtensor-blasTargets.cmake
evsim_joints/cmake/xtensor-io/: xtensor-ioConfig.cmake  xtensor-ioConfigVersion.cmake
evsim_live/: .gitignore  CMakeLists.txt  README.md  config.h  default.frag  evis60.py  framebuffer.cpp  main.cpp  mano.cpp  manoanimator.cpp  manoanimator.h  manotexture.cpp  manotexture.h  manotypes.h  metadatawriter.cpp  metadatawriter.h  model.cpp  model.h  quad.frag  quad.vert  shader.cpp  texture.h
evsim_live/cmake/xtensor/: xtensorConfigVersion.cmake
evsim_live/cmake/xtensor-blas/: xtensor-blasConfig.cmake
filter/: README.md  filter.py  filter_fast.py
live_demo/: live_cython.pyx  live_predict.py  model.py  setup.py
model/: evis60.py  fastevc.py  overlay.py  predict3.py  predict3_npz.py  predict3_synth.py  renderjoints.py  train.py
real_eval_data/regular/: eval_real_model.py
sync/: README.md  main.py
synth_eval_data/: eval_synth_model_2d.py  eval_synth_model_3d.py
